# Tortillas

./: .gitmodules  .pre-commit-config.yaml  README.md  gitlab-ci-example-alpine.yml  gitlab-ci-example.yml  pyproject.toml  salsa.py  setup_sweb.sh  tortillas_config.yml
.github/workflows/: demo_ci.yml  extended_ci.yml  internal_tests_ci.yml  minimal_ci.yml
examples/: .gitlab-ci.yml  README.md  tortillas_config.yml
examples/base/: add_ide_driver_debug_error_check.diff  tortillas_config.yml
examples/base/sweb_patches/: _fix_mounting_error.diff  activate_debug_prints.diff  activate_pathwalker_debug.diff  add_syscalls.diff  add_test_spec_mult.diff  change_ide_device_detection.diff  debug_ide_device_detection.diff  no_grub_boot_menu.diff
examples/common_sweb_patches/: add_test_spec_mult.diff
examples/extended/: tortillas_config.yml
examples/extended/sweb_patches/: add_tortillas_expect.diff  add_tortillas_expect_test.diff
examples/minimal/: tortillas_config.yml
examples/panic/sweb_patches/: add_failing_tests.diff  add_some_kernel_panics.diff
sweb_patches/: add_config_header_mult.diff  add_syscalls.diff  no_grub_boot_menu.diff
tests/: check_log_analyzer.py  check_log_parser.py  check_qemu_interface.py  check_test_result.py  check_tortillas_config.py
tests/assets/: out_log.txt  test_spec.txt
tortillas/: __main__.py  constants.py  interrupt_watchdog.py  log_analyzer.py  log_parser.py  main.py  progress_bar.py  qemu_interface.py  test.py  test_config.py  test_result.py  test_runner.py  test_specification.py  tortillas_config.py  utils.py
