[project]
name = "tortillas"
version = "0.2.0"
description = "A test runner for SWEB Educational OS (IAIK/sweb)"

authors = [
    { name = "Maximilian Seidler" },
    { name = "Leo Moser" }
]

requires-python = ">=3.8"
dependencies = ["pyyaml"]

[project.optional-dependencies]
fancy = ["enlighten"]
dev = ["pytest", "ruff", "pre-commit"]

[project.scripts]
tortillas = "tortillas.__main__:main"

[project.urls]
"Source" = "https://github.com/PaideiaDilemma/Tortillas"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "check_*.py"
python_classes = ""

[tool.ruff]
select = ["E", "F", "ANN001", "ANN002", "ANN001", "ANN102", "C4", "RET", "SIM", "T"]
extend-exclude = ["salsa.py", "example"]
